# the_playground

./: CMakeLists.txt  LICENSE  README.md
box/: CMakeLists.txt  box.h  main.cpp
cache_padding/: CMakeLists.txt  main.cpp
dci_traits/: CMakeLists.txt  main.cpp  roles.h
generic_programming/: CMakeLists.txt  main.cpp
