cmake_minimum_required(VERSION 3.25)
project(cpp_playground CXX)

add_subdirectory(box)
add_subdirectory(cache_padding)
add_subdirectory(covariant_dispatch)
add_subdirectory(dci_traits)
add_subdirectory(generic_programming)
add_subdirectory(match)
add_subdirectory(modules)
add_subdirectory(reference_wrapper)
add_subdirectory(generic_programming)
